sketch work on event sourcing

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -25,4 +25,5 @@
   <repository path="..\tests\Euclid.Sdk.IntegrationTests\packages.config" />
   <repository path="..\src\common\Euclid.Common.Storage.NHibernate\packages.config" />
   <repository path="..\src\framework\Euclid.Framework.Cqrs.NHibernate\packages.config" />
+  <repository path="..\src\framework\Euclid.Framework.EventSourcing\packages.config" />
 </repositories>
