--- a/src/sdk/Euclid.Agent/Euclid.Agent.csproj
+++ b/src/sdk/Euclid.Agent/Euclid.Agent.csproj
@@ -63,6 +63,9 @@
     <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper">
+      <HintPath>..\..\..\packages\AutoMapper.1.1.0.118\lib\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.0.2.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Newtonsoft.Json.4.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -75,22 +78,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Agent.cs" />
-    <Compile Include="AssemblyNotAgentException.cs" />
-    <Compile Include="Attributes\AgentNameAttribute.cs" />
-    <Compile Include="Attributes\AgentSystemNameAttribute.cs" />
-    <Compile Include="Attributes\LocationOfCommandsAttribute.cs" />
-    <Compile Include="Attributes\LocationOfProcessorsAttribute.cs" />
-    <Compile Include="Attributes\LocationOfQueriesAttribute.cs" />
-    <Compile Include="Extensions\AgentMetadataCollectionExtensions.cs" />
+    <Compile Include="AgentMetadata.cs" />
     <Compile Include="Parts\CommandMetadataCollection.cs" />
     <Compile Include="Parts\QueryMetadataCollection.cs" />
     <Compile Include="Parts\ReadModelMetadataCollection.cs" />
     <Compile Include="DuplicatePartNameException.cs" />
     <Compile Include="Parts\InvalidAgentPartImplementationException.cs" />
     <Compile Include="Parts\InvalidPropertySetterSpecifiedException.cs" />
-    <Compile Include="Extensions\AssemblyExtensions.cs" />
-    <Compile Include="Extensions\TypeExtensions.cs" />
     <Compile Include="PartCollectionsBase.cs" />
     <Compile Include="Parts\PartNotRegisteredException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
