--- a/tests/Euclid.Common.IntegrationTests/Euclid.Common.IntegrationTests.csproj
+++ b/tests/Euclid.Common.IntegrationTests/Euclid.Common.IntegrationTests.csproj
@@ -97,13 +97,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublicationTests.cs" />
     <Compile Include="Storage\AzureBlobStorageTests.cs" />
-    <Compile Include="AutoMapperConfiguration.cs" />
     <Compile Include="Storage\Model\NhSimpleRepositoryTests.cs" />
-    <Compile Include="NhTestFixture.cs" />
     <Compile Include="Storage\NhRecordMapperTests.cs" />
     <Compile Include="Transport\AzureTransportTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\sdk\Euclid.TestingSupport\Euclid.TestingSupport.csproj">
+      <Project>{4390CD07-BCBD-417F-B6FE-85A5CAABDFE5}</Project>
+      <Name>Euclid.TestingSupport</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\src\common\Euclid.Common.Messaging.Azure\Euclid.Common.Messaging.Azure.csproj">
       <Project>{BB6CE799-54E1-4019-B918-992DCD78480A}</Project>
       <Name>Euclid.Common.Messaging.Azure</Name>
