added categories to all unit tests

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -29,4 +29,5 @@
   <repository path="..\src\framework\Euclid.Framework.Agent\packages.config" />
   <repository path="..\src\sdk\Euclid.Agent\packages.config" />
   <repository path="..\sdk\Euclid.TestingSupport\packages.config" />
+  <repository path="..\tests\Euclid.Sdk.Metadata\packages.config" />
 </repositories>
