--- a/sdk/Euclid.TestingSupport/Euclid.TestingSupport.csproj
+++ b/sdk/Euclid.TestingSupport/Euclid.TestingSupport.csproj
@@ -78,6 +78,7 @@
     <Compile Include="HostingFabricFixture.cs" />
     <Compile Include="NhTestFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestCategories.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
