--- a/tests/Euclid.Sdk.IntegrationTests/Euclid.Sdk.IntegrationTests.csproj
+++ b/tests/Euclid.Sdk.IntegrationTests/Euclid.Sdk.IntegrationTests.csproj
@@ -175,9 +175,7 @@
       <Name>Euclid.Sdk.FakeAgent</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Specflow\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
