--- a/tests/Euclid.Sdk.Metadata/Euclid.Sdk.MetadataTests.csproj
+++ b/tests/Euclid.Sdk.Metadata/Euclid.Sdk.MetadataTests.csproj
@@ -64,7 +64,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="EuclidMetadataProviderTestSteps.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>EuclidMetadataProviderTestSteps.feature.cs</LastGenOutput>
