finished initial version of metadata service

--- a/src/framework/Euclid.Framework.Agent/Euclid.Framework.Agent.csproj
+++ b/src/framework/Euclid.Framework.Agent/Euclid.Framework.Agent.csproj
@@ -53,24 +53,27 @@
     <Compile Include="Extensions\AgentMetadataCollectionExtensions.cs" />
     <Compile Include="Extensions\AssemblyExtensions.cs" />
     <Compile Include="Extensions\TypeExtensions.cs" />
-    <Compile Include="Metadata\AgentMetadataFormatter.cs" />
+    <Compile Include="Metadata\AgentMetadata.cs" />
     <Compile Include="Metadata\AgentPartFormatterNotFoundException.cs" />
     <Compile Include="Metadata\ArgumentMetadata.cs" />
-    <Compile Include="Metadata\FormattableMetadata.cs" />
+    <Compile Include="Metadata\Formatters\CommandCollectionFormatter.cs" />
+    <Compile Include="Metadata\FormattableMetadataFactory.cs" />
     <Compile Include="Metadata\Formatters\CommandFormatter.cs" />
-    <Compile Include="Metadata\Formatters\MetadataFormatterFormatter.cs" />
+    <Compile Include="Metadata\Formatters\MetadataFormatter.cs" />
     <Compile Include="Metadata\Formatters\QueryFormatter.cs" />
     <Compile Include="Metadata\Formatters\ReadModelFormatter.cs" />
     <Compile Include="Metadata\InterfaceMetadata.cs" />
     <Compile Include="Metadata\MethodMetadata.cs" />
+    <Compile Include="Metadata\Formatters\ReadModelCollectionFormatter.cs" />
+    <Compile Include="PartCollection\CommandPartCollection.cs" />
+    <Compile Include="PartCollection\QueryPartCollection.cs" />
+    <Compile Include="PartCollection\PartCollectionBase.cs" />
     <Compile Include="Metadata\TypeMetadata.cs" />
-    <Compile Include="PartCollectionsBase.cs" />
-    <Compile Include="Parts\CommandMetadataFormatterCollection.cs" />
-    <Compile Include="Parts\InvalidAgentPartImplementationException.cs" />
-    <Compile Include="Parts\InvalidPropertySetterSpecifiedException.cs" />
-    <Compile Include="Parts\PartNotRegisteredException.cs" />
-    <Compile Include="Parts\QueryMetadataFormatterCollection.cs" />
-    <Compile Include="Parts\ReadModelMetadataFormatterCollection.cs" />
+    <Compile Include="PartCollection\InvalidAgentPartImplementationException.cs" />
+    <Compile Include="PartCollection\InvalidPropertySetterSpecifiedException.cs" />
+    <Compile Include="PartCollection\PartNotRegisteredException.cs" />
+    <Compile Include="Metadata\Formatters\QueryCollectionFormatter.cs" />
+    <Compile Include="PartCollection\ReadModelPartCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Metadata\PropertyMetadata.cs" />
   </ItemGroup>
