--- a/src/framework/Euclid.Framework/Euclid.Framework.csproj
+++ b/src/framework/Euclid.Framework/Euclid.Framework.csproj
@@ -77,12 +77,10 @@
     <Compile Include="Agent\Metadata\AssemblyNotAgentException.cs" />
     <Compile Include="Agent\Metadata\ExpectedConstructorMissingException.cs" />
     <Compile Include="Agent\Metadata\IArgumentMetadata.cs" />
-    <Compile Include="Agent\Metadata\IFormattableMetadata.cs" />
+    <Compile Include="Agent\Metadata\IPartCollection.cs" />
     <Compile Include="Agent\Metadata\IMetadataFormatter.cs" />
     <Compile Include="Agent\Metadata\IMethodMetadata.cs" />
-    <Compile Include="Agent\Metadata\InvalidAgentPartTypeSpecifiedException.cs" />
-    <Compile Include="Agent\Metadata\IQueryMetadataFormatterCollection.cs" />
-    <Compile Include="Agent\Metadata\IReadModelMetadataFormatterCollection.cs" />
+    <Compile Include="Agent\Metadata\PartCollectionNotFound.cs" />
     <Compile Include="Agent\Metadata\MetadataFormatNotSupportedException.cs" />
     <Compile Include="Cqrs\CommandDispatcherConfigurationException.cs" />
     <Compile Include="Cqrs\ICommand.cs" />
@@ -106,10 +104,8 @@
     <Compile Include="EventSourcing\IEventSourcedAggregate.cs" />
     <Compile Include="Agent\Metadata\UnexpectedTypeException.cs" />
     <Compile Include="Models\IReadModel.cs" />
-    <Compile Include="Agent\Metadata\IAgentMetadataFormatter.cs" />
+    <Compile Include="Agent\Metadata\IAgentMetadata.cs" />
     <Compile Include="Agent\Metadata\IAgentPart.cs" />
-    <Compile Include="Agent\Metadata\IAgentPartMetadataFormatterCollection.cs" />
-    <Compile Include="Agent\Metadata\ICommandMetadataFormatterCollection.cs" />
     <Compile Include="Agent\Metadata\IInterfaceMetadata.cs" />
     <Compile Include="Agent\Metadata\IPropertyMetadata.cs" />
     <Compile Include="Agent\Metadata\ITypeMetadata.cs" />
