--- a/src/sdk/Euclid.Composites.Mvc/Euclid.Composites.Mvc.csproj
+++ b/src/sdk/Euclid.Composites.Mvc/Euclid.Composites.Mvc.csproj
@@ -99,7 +99,7 @@
     <Compile Include="ActionFilters\AgentPartMetdataNotFoundException.cs" />
     <Compile Include="ActionFilters\ApplicationNotPartResolverException.cs" />
     <Compile Include="ActionFilters\CannotRetrieveInputModelException.cs" />
-    <Compile Include="ActionFilters\CannotRetrieveMetadataException.cs" />
+    <Compile Include="ActionFilters\TypeMetadataNotFoundException.cs" />
     <Compile Include="ActionFilters\FormatAgentMetadata.cs" />
     <Compile Include="ActionFilters\FormatListOfBasicAgentMetadata.cs" />
     <Compile Include="ActionFilters\FormatInputModelAttribute.cs" />
@@ -107,14 +107,16 @@
     <Compile Include="ActionFilters\FormatPartCollectionMetadataAttribute.cs" />
     <Compile Include="ActionFilters\FormatPartMetadataAttribute.cs" />
     <Compile Include="ActionFilters\MetadataFormatterAttributeBase.cs" />
-    <Compile Include="Binders\AgentMetadataModelBinder.cs" />
-    <Compile Include="Binders\AgentPartMetadataCollectionBinder.cs" />
+    <Compile Include="Binders\AgentMetadataBinder.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Binders\AgentPartTypeNotSpecifiedException.cs" />
     <Compile Include="Binders\CannotSetInputModelPropertyValues.cs" />
     <Compile Include="Binders\IEuclidModelBinder.cs" />
     <Compile Include="Binders\InputModelBinder.cs" />
-    <Compile Include="Binders\InvalidPartCollectionException.cs" />
-    <Compile Include="Binders\TypeMetadataModelBinder.cs" />
+    <Compile Include="Binders\PartCollectionNotFoundException.cs" />
+    <Compile Include="Binders\PartCollectionBinder.cs" />
+    <Compile Include="Binders\TypeMetadataBinder.cs" />
     <Compile Include="ComponentRegistration\ComponentRegistrationBase.cs" />
     <Compile Include="ComponentRegistration\ControllerContainerInstaller.cs" />
     <Compile Include="ComponentRegistration\ModelBinderInstaller.cs" />
