--- a/tests/Euclid.Sdk.Metadata/Euclid.Sdk.MetadataTests.csproj
+++ b/tests/Euclid.Sdk.Metadata/Euclid.Sdk.MetadataTests.csproj
@@ -1,6 +1,4 @@
-
-d:\Projects\Euclid\platform>@git.exe %*
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -104,8 +102,3 @@ d:\Projects\Euclid\platform>@git.exe %*
   </Target>
   -->
 </Project>
-d:\Projects\Euclid\platform>@set ErrorLevel=%ErrorLevel%
-
-d:\Projects\Euclid\platform>@rem Restore the original console codepage.
-
-d:\Projects\Euclid\platform>@chcp %cp_oem% > nul < nul
