--- a/nuget/MetadataComposite.nuspec
+++ b/nuget/MetadataComposite.nuspec
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>1</id>
-    <version>1.0</version>
+    <id>Euclid</id>
+    <version>1.0.0.3</version>
     <authors>Newco</authors>
     <owners>Newco</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
