--- a/src/sdk/MetadataComposite/MetadataComposite.csproj
+++ b/src/sdk/MetadataComposite/MetadataComposite.csproj
@@ -14,7 +14,7 @@
     <AssemblyName>MetadataComposite</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -161,45 +161,7 @@
     <Content Include="Areas\Metadata\Scripts\MicrosoftMvcValidation.debug.js" />
     <Content Include="Areas\Metadata\Scripts\MicrosoftMvcValidation.js" />
     <Content Include="Areas\Metadata\Scripts\modernizr-2.0.6-development-only.js" />
-    <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
-    <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_65_ffffff_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_75_dadada_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_75_e6e6e6_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_95_fef1ec_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
-    <Content Include="Content\themes\base\images\ui-icons_222222_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_2e83ff_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_454545_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_888888_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_cd0a0a_256x240.png" />
-    <Content Include="Content\themes\base\jquery.ui.accordion.css" />
-    <Content Include="Content\themes\base\jquery.ui.all.css" />
-    <Content Include="Content\themes\base\jquery.ui.autocomplete.css" />
-    <Content Include="Content\themes\base\jquery.ui.base.css" />
-    <Content Include="Content\themes\base\jquery.ui.button.css" />
-    <Content Include="Content\themes\base\jquery.ui.core.css" />
-    <Content Include="Content\themes\base\jquery.ui.datepicker.css" />
-    <Content Include="Content\themes\base\jquery.ui.dialog.css" />
-    <Content Include="Content\themes\base\jquery.ui.progressbar.css" />
-    <Content Include="Content\themes\base\jquery.ui.resizable.css" />
-    <Content Include="Content\themes\base\jquery.ui.selectable.css" />
-    <Content Include="Content\themes\base\jquery.ui.slider.css" />
-    <Content Include="Content\themes\base\jquery.ui.tabs.css" />
-    <Content Include="Content\themes\base\jquery.ui.theme.css" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
-    <Content Include="Scripts\jquery-1.5.1-vsdoc.js" />
-    <Content Include="Scripts\jquery-1.5.1.js" />
-    <Content Include="Scripts\jquery-1.5.1.min.js" />
-    <Content Include="Scripts\jquery-ui-1.8.11.js" />
-    <Content Include="Scripts\jquery-ui-1.8.11.min.js" />
-    <Content Include="Scripts\jquery.validate-vsdoc.js" />
-    <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="Scripts\modernizr-1.7.js" />
-    <Content Include="Scripts\modernizr-1.7.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -207,25 +169,8 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
-    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\MicrosoftAjax.js" />
-    <Content Include="Scripts\MicrosoftAjax.debug.js" />
-    <Content Include="Scripts\MicrosoftMvcAjax.js" />
-    <Content Include="Scripts\MicrosoftMvcAjax.debug.js" />
-    <Content Include="Scripts\MicrosoftMvcValidation.js" />
-    <Content Include="Scripts\MicrosoftMvcValidation.debug.js" />
-    <Content Include="Views\Web.config" />
-    <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Shared\Error.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
@@ -263,9 +208,113 @@
     <Content Include="Areas\Metadata\Views\Shared\MetadataLinks.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\apps\ForumAgent\ForumAgent.csproj">
+      <Project>{7C5DC02C-5E2E-46A2-8343-ADE8035F141B}</Project>
+      <Name>ForumAgent</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\tests\Euclid.Common.IntegrationTests\Euclid.Common.IntegrationTests.csproj">
+      <Project>{9D90C0A5-BD70-4DBB-A3EF-3B9D035BF41F}</Project>
+      <Name>Euclid.Common.IntegrationTests</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\tests\Euclid.Common.TestingFakes\Euclid.Common.TestingFakes.csproj">
+      <Project>{B63C4D62-939A-45AB-95F2-EBFBE4B5013C}</Project>
+      <Name>Euclid.Common.TestingFakes</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\tests\Euclid.Common.UnitTests\Euclid.Common.UnitTests.csproj">
+      <Project>{F1080594-08D8-44A7-A1FA-1AAAE608FE45}</Project>
+      <Name>Euclid.Common.UnitTests</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\tests\Euclid.Composite.InputModelMapping\Euclid.Composite.InputModelMapping.csproj">
+      <Project>{F80DC74B-9C31-43AA-B339-9F9EDF9372A8}</Project>
+      <Name>Euclid.Composite.InputModelMapping</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\tests\Euclid.Framework.IntegrationTests\Euclid.Framework.IntegrationTests.csproj">
+      <Project>{7F5BA044-DA1D-418D-A14F-708BC69C926E}</Project>
+      <Name>Euclid.Framework.IntegrationTests</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\tests\Euclid.Framework.TestingFakes\Euclid.Framework.TestingFakes.csproj">
+      <Project>{793DEE69-90CB-45D7-94CC-FD2D7CE59790}</Project>
+      <Name>Euclid.Framework.TestingFakes</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\tests\Euclid.Framework.UnitTests\Euclid.Framework.UnitTests.csproj">
+      <Project>{B66BD805-49C3-4DC8-B530-15776A68A48A}</Project>
+      <Name>Euclid.Framework.UnitTests</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\tests\Euclid.Sdk.FakeAgent\Euclid.Sdk.FakeAgent.csproj">
+      <Project>{F2CA2CE6-3D33-4FF2-8E8B-8B16E571F98C}</Project>
+      <Name>Euclid.Sdk.FakeAgent</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\tests\Euclid.Sdk.IntegrationTests\Euclid.Sdk.IntegrationTests.csproj">
+      <Project>{02AAAF17-7C44-43EB-9AA8-48E03A7C67AE}</Project>
+      <Name>Euclid.Sdk.IntegrationTests</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\tests\Euclid.Sdk.Metadata\Euclid.Sdk.MetadataTests.csproj">
+      <Project>{AC366DF0-1269-4C2C-9599-B02FCB8402FE}</Project>
+      <Name>Euclid.Sdk.MetadataTests</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\common\Euclid.Common.Configuration\Euclid.Common.Configuration.csproj">
+      <Project>{B04EEAA1-7492-41B9-9CEA-1D961D9A8568}</Project>
+      <Name>Euclid.Common.Configuration</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\common\Euclid.Common.Logging\Euclid.Common.Logging.csproj">
+      <Project>{8D46ACE3-E0DC-4317-B321-BDFE71F843E7}</Project>
+      <Name>Euclid.Common.Logging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\common\Euclid.Common.Messaging.Azure\Euclid.Common.Messaging.Azure.csproj">
+      <Project>{BB6CE799-54E1-4019-B918-992DCD78480A}</Project>
+      <Name>Euclid.Common.Messaging.Azure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\common\Euclid.Common.Messaging\Euclid.Common.Messaging.csproj">
+      <Project>{4F499249-B39C-4DD2-A75C-FE768E90579F}</Project>
+      <Name>Euclid.Common.Messaging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\common\Euclid.Common.Packaging\Euclid.Common.Packaging.csproj">
+      <Project>{53F086A1-EC8E-40F8-BC87-2E5B3AA778D6}</Project>
+      <Name>Euclid.Common.Packaging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\common\Euclid.Common.ServiceHost\Euclid.Common.ServiceHost.csproj">
+      <Project>{4192538D-5E42-4841-8C8F-6A2072808D41}</Project>
+      <Name>Euclid.Common.ServiceHost</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\common\Euclid.Common.Storage.Azure\Euclid.Common.Storage.Azure.csproj">
+      <Project>{9190A42E-76B2-4315-9374-DF188D78881B}</Project>
+      <Name>Euclid.Common.Storage.Azure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\common\Euclid.Common.Storage.NHibernate\Euclid.Common.Storage.NHibernate.csproj">
+      <Project>{A5B72DFB-6698-420C-ADCC-3F2D28C4F65E}</Project>
+      <Name>Euclid.Common.Storage.NHibernate</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\common\Euclid.Common.Storage\Euclid.Common.Storage.csproj">
+      <Project>{9E2D08E0-0A3D-46D1-BCD6-D85ADE871118}</Project>
+      <Name>Euclid.Common.Storage</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\common\Euclid.Common\Euclid.Common.csproj">
       <Project>{F3A0C178-15D9-4E18-B673-28B80F40E665}</Project>
       <Name>Euclid.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\framework\Euclid.Framework.Agent\Euclid.Framework.Agent.csproj">
+      <Project>{272059FF-3EF6-49A1-9DA5-D8649A17AA0C}</Project>
+      <Name>Euclid.Framework.Agent</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\framework\Euclid.Framework.Cqrs.NHibernate\Euclid.Framework.Cqrs.NHibernate.csproj">
+      <Project>{5A255BCD-5858-4CB3-BE76-177E65048D4F}</Project>
+      <Name>Euclid.Framework.Cqrs.NHibernate</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\framework\Euclid.Framework.Cqrs\Euclid.Framework.Cqrs.csproj">
+      <Project>{58D2349E-9C39-485E-861E-E337ACF186B6}</Project>
+      <Name>Euclid.Framework.Cqrs</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\framework\Euclid.Framework.EventSourcing\Euclid.Framework.EventSourcing.csproj">
+      <Project>{35457F8B-839A-42B5-9CAC-CDDEFC7B7515}</Project>
+      <Name>Euclid.Framework.EventSourcing</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\framework\Euclid.Framework.HostingFabric\Euclid.Framework.HostingFabric.csproj">
+      <Project>{6B55CE77-2663-45F0-ADB2-DFC7AB01233C}</Project>
+      <Name>Euclid.Framework.HostingFabric</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\framework\Euclid.Framework.Models\Euclid.Framework.Models.csproj">
+      <Project>{7BBC7165-5E13-4802-B79F-00E754319F0B}</Project>
+      <Name>Euclid.Framework.Models</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\framework\Euclid.Framework\Euclid.Framework.csproj">
       <Project>{8BA2EA0C-2220-4390-A87C-79E96E40DFD0}</Project>
@@ -279,6 +328,13 @@
       <Project>{12029AA6-F05C-4DC6-B76E-C3798BCAC68D}</Project>
       <Name>Euclid.Composites</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Euclid.TestingSupport\Euclid.TestingSupport.csproj">
+      <Project>{4390CD07-BCBD-417F-B6FE-85A5CAABDFE5}</Project>
+      <Name>Euclid.TestingSupport</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Euclid.Global.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
@@ -299,8 +355,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>24561</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>
-          </IISUrl>
+          <IISUrl>http://localhost:24561/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
