--- a/src/sdk/MetadataComposite/Web.config
+++ b/src/sdk/MetadataComposite/Web.config
@@ -12,6 +12,9 @@
   </appSettings>
     
   <system.web>
+      <httpModules>
+          <add name="PerRequestLifestyle" type="Castle.MicroKernel.Lifestyle.PerWebRequestLifestyleModule, Castle.Windsor" />
+      </httpModules>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
