--- a/tests/Euclid.Common.IntegrationTests/Euclid.Common.IntegrationTests.csproj
+++ b/tests/Euclid.Common.IntegrationTests/Euclid.Common.IntegrationTests.csproj
@@ -126,6 +126,10 @@
       <Project>{F3A0C178-15D9-4E18-B673-28B80F40E665}</Project>
       <Name>Euclid.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\src\sdk\Euclid.TestingSupport\Euclid.TestingSupport.csproj">
+      <Project>{4390CD07-BCBD-417F-B6FE-85A5CAABDFE5}</Project>
+      <Name>Euclid.TestingSupport</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Euclid.Common.TestingFakes\Euclid.Common.TestingFakes.csproj">
       <Project>{B63C4D62-939A-45AB-95F2-EBFBE4B5013C}</Project>
       <Name>Euclid.Common.TestingFakes</Name>
