--- a/tests/Euclid.Framework.IntegrationTests/Euclid.Framework.IntegrationTests.csproj
+++ b/tests/Euclid.Framework.IntegrationTests/Euclid.Framework.IntegrationTests.csproj
@@ -152,6 +152,10 @@
       <Project>{8BA2EA0C-2220-4390-A87C-79E96E40DFD0}</Project>
       <Name>Euclid.Framework</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\src\sdk\Euclid.TestingSupport\Euclid.TestingSupport.csproj">
+      <Project>{4390CD07-BCBD-417F-B6FE-85A5CAABDFE5}</Project>
+      <Name>Euclid.TestingSupport</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Euclid.Framework.TestingFakes\Euclid.Framework.TestingFakes.csproj">
       <Project>{793DEE69-90CB-45D7-94CC-FD2D7CE59790}</Project>
       <Name>Euclid.Framework.TestingFakes</Name>
