--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -28,7 +28,7 @@
   <repository path="..\src\framework\Euclid.Framework.EventSourcing\packages.config" />
   <repository path="..\src\framework\Euclid.Framework.Agent\packages.config" />
   <repository path="..\src\sdk\Euclid.Agent\packages.config" />
-  <repository path="..\sdk\Euclid.TestingSupport\packages.config" />
   <repository path="..\tests\Euclid.Sdk.Metadata\packages.config" />
   <repository path="..\src\SDK\MetadataComposite\packages.config" />
+  <repository path="..\src\sdk\Euclid.TestingSupport\packages.config" />
 </repositories>
