refactoring in hosting fabric framework; also, moved IAggregateRoot to Framework.Models. i'm still unsure of this namespace, but I think as it collects more types we'll be able to see how they should be organized better

--- a/src/framework/Euclid.Framework.Cqrs/Euclid.Framework.Cqrs.csproj
+++ b/src/framework/Euclid.Framework.Cqrs/Euclid.Framework.Cqrs.csproj
@@ -89,9 +89,9 @@
     <Compile Include="CommandPublicationRecord.cs" />
     <Compile Include="CommandPublisher.cs" />
     <Compile Include="CommandRegistry.cs" />
-    <Compile Include="Configuration\CommandHostService.cs" />
-    <Compile Include="Configuration\Dispatcher.cs" />
-    <Compile Include="Configuration\TimeSpanConfiguration.cs" />
+    <Compile Include="Settings\CommandHostService.cs" />
+    <Compile Include="Settings\Dispatcher.cs" />
+    <Compile Include="Settings\TimeSpanConfiguration.cs" />
     <Compile Include="DefaultCommand.cs" />
     <Compile Include="DefaultCommandProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
