--- a/src/framework/Euclid.Framework/Euclid.Framework.csproj
+++ b/src/framework/Euclid.Framework/Euclid.Framework.csproj
@@ -82,7 +82,7 @@
     <Compile Include="Agent\Metadata\IMethodMetadata.cs" />
     <Compile Include="Agent\Metadata\PartCollectionNotFound.cs" />
     <Compile Include="Agent\Metadata\MetadataFormatNotSupportedException.cs" />
-    <Compile Include="Cqrs\CommandDispatcherConfigurationException.cs" />
+    <Compile Include="Cqrs\Settings\CommandDispatcherSettingsException.cs" />
     <Compile Include="Cqrs\ICommand.cs" />
     <Compile Include="Cqrs\ICommandDispatcher.cs" />
     <Compile Include="Cqrs\ICommandProcessor.cs" />
@@ -91,6 +91,8 @@
     <Compile Include="Cqrs\InvalidMessageTypeException.cs" />
     <Compile Include="Cqrs\IQuery.cs" />
     <Compile Include="EventSourcing\IAggregateDenormalizer.cs" />
+    <Compile Include="HostingFabric\CompositeAlreadyInstalledException.cs" />
+    <Compile Include="HostingFabric\CompositeNotConfiguredException.cs" />
     <Compile Include="HostingFabric\FabricRuntimeState.cs" />
     <Compile Include="HostingFabric\HostedServiceNotResolvableException.cs" />
     <Compile Include="HostingFabric\IFabricRuntime.cs" />
@@ -99,7 +101,7 @@
     <Compile Include="HostingFabric\NoHostedServicesConfiguredException.cs" />
     <Compile Include="HostingFabric\NoServiceHostConfiguredException.cs" />
     <Compile Include="HostingFabric\ServiceHostNotResolvableException.cs" />
-    <Compile Include="IAggregateRoot.cs" />
+    <Compile Include="Models\IAggregateRoot.cs" />
     <Compile Include="EventSourcing\IEvent.cs" />
     <Compile Include="EventSourcing\IEventSourcedAggregate.cs" />
     <Compile Include="Agent\Metadata\UnexpectedTypeException.cs" />
