minor refactoring in common, hopefully leading up to fixing IRecordMapper at some point soon

--- a/src/common/Euclid.Common.Storage/Euclid.Common.Storage.csproj
+++ b/src/common/Euclid.Common.Storage/Euclid.Common.Storage.csproj
@@ -70,7 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Blob.cs" />
-    <Compile Include="Configuration\BlobStorageSettings.cs" />
+    <Compile Include="BlobStorageSettings.cs" />
     <Compile Include="InMemoryBlobStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InMemoryRecordMapper.cs" />
