--- a/apps/ForumTests/packages.config
+++ b/apps/ForumTests/packages.config
@@ -10,4 +10,5 @@
   <package id="CommonServiceLocator" version="1.0" />
   <package id="CommonServiceLocator.WindsorAdapter" version="1.0" />
   <package id="log4net" version="1.2.10" />
+  <package id="SpecFlow" version="1.7.0" />
 </packages>
