replaced all forum agent unit tests with specs; removed category read model and query from forum agent, it will be restored later, it requires an admin; created several spec support types

--- a/apps/ForumTests/app.config
+++ b/apps/ForumTests/app.config
@@ -22,7 +22,7 @@
   </appSettings>
   <log4net>
     <root>
-      <priority value="DEBUG" />
+      <priority value="WARN" />
       <appender-ref ref="Console" />
     </root>
     <logger name="NHibernate">
