--- a/apps/ForumTests/ForumTests.csproj
+++ b/apps/ForumTests/ForumTests.csproj
@@ -83,39 +83,48 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Features\AgentEndToEndFeatureSteps.cs" />
-    <Compile Include="Features\ForumCommenting.feature.cs">
+    <Compile Include="ForumCommenting.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ForumCommenting.feature</DependentUpon>
     </Compile>
-    <Compile Include="Features\ForumPosting1.feature.cs">
+    <Compile Include="ForumPosting1.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ForumPosting.feature</DependentUpon>
     </Compile>
-    <Compile Include="Features\ForumVoting.feature.cs">
+    <Compile Include="ForumVoting.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ForumVoting.feature</DependentUpon>
     </Compile>
+    <Compile Include="Steps\ConfigureAgentSteps.cs" />
+    <Compile Include="Steps\ForumSteps.cs" />
+    <Compile Include="Steps\UserSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="EndToEnd\UserEndToEndTests.cs" />
-    <Compile Include="Queries\UserQueryTests.cs" />
+    <Compile Include="UserProfile.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>UserProfile.feature</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="Features\ForumCommenting.feature">
+    <None Include="ForumCommenting.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>ForumCommenting.feature.cs</LastGenOutput>
     </None>
-    <None Include="Features\ForumPosting.feature">
+    <None Include="ForumPosting.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>ForumPosting1.feature.cs</LastGenOutput>
     </None>
-    <None Include="Features\ForumVoting.feature">
+    <None Include="ForumVoting.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>ForumVoting.feature.cs</LastGenOutput>
+    </None>
+    <None Include="UserProfile.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>UserProfile.feature.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
