--- a/src/sdk/AgentPanel/AgentPanel.csproj
+++ b/src/sdk/AgentPanel/AgentPanel.csproj
@@ -393,6 +393,9 @@
       <Name>Euclid.TestingSupport</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\Metadata\Views\Agents\ViewInputModelForCommand.cshtml" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
