--- a/tests/Euclid.Sdk.Specifications/packages.config
+++ b/tests/Euclid.Sdk.Specifications/packages.config
@@ -4,4 +4,5 @@
   <package id="NUnit" version="2.5.10.11092" />
   <package id="HttpClient" version="0.3.0" />
   <package id="AutoMapper" version="1.1.0.118" />
+  <package id="MvcContrib.WatiN" version="2.0.96.0" />
 </packages>
