--- a/tests/Euclid.Sdk.Specifications/App.config
+++ b/tests/Euclid.Sdk.Specifications/App.config
@@ -2,8 +2,17 @@
 <configuration>
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
+      <sectionGroup name="NUnit">
+          <section name="TestRunner" type="System.Configuration.NameValueSectionHandler"/>
+      </sectionGroup>
   </configSections>
   <specFlow>
     <!-- For additional details on SpecFlow configuration options see https://github.com/techtalk/SpecFlow/wiki/Configuration -->
   </specFlow>
+    <NUnit>
+        <TestRunner>
+            <!-- Valid values are STA,MTA. Others ignored. -->
+            <add key="ApartmentState" value="STA" />
+        </TestRunner>
+    </NUnit>
 </configuration>
