--- a/tests/Euclid.Sdk.Specifications/packages.config
+++ b/tests/Euclid.Sdk.Specifications/packages.config
@@ -5,4 +5,11 @@
   <package id="HttpClient" version="0.3.0" />
   <package id="AutoMapper" version="1.1.0.118" />
   <package id="MvcContrib.WatiN" version="2.0.96.0" />
+  <package id="Castle.Core" version="2.5.2" />
+  <package id="Castle.Windsor" version="2.5.3" />
+  <package id="CommonServiceLocator" version="1.0" />
+  <package id="CommonServiceLocator.WindsorAdapter" version="1.0" />
+  <package id="Iesi.Collections" version="3.2.0.4000" />
+  <package id="NHibernate" version="3.2.0.4000" />
+  <package id="FluentNHibernate" version="1.3.0.717" />
 </packages>
