--- a/tests/Euclid.Sdk.TestComposite/Web.config
+++ b/tests/Euclid.Sdk.TestComposite/Web.config
@@ -8,7 +8,12 @@
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  </appSettings>
+		<add key="DataConnectionString" value="UseDevelopmentStorage=true" />
+	</appSettings>
+	<connectionStrings>
+		<add name="test-db" connectionString="Data Source=.;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
+		<add name="Sqlite_InMemory" providerName="System.Data.SQLite" connectionString="Data Source=:memory:;Version=3;New=True" />
+	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
