agent console spec doesn't pass, but it fails in a way that i think illustrates the flaw in watin

--- a/tests/Euclid.Sdk.Specifications/Euclid.Sdk.Specifications.csproj
+++ b/tests/Euclid.Sdk.Specifications/Euclid.Sdk.Specifications.csproj
@@ -120,7 +120,9 @@
     <Compile Include="AppSettings\SettingOutputChannelOnCompositeAppSetting.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="AppSettings\CompositeSettingsCanBeValidated.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>CompositeSettingsCanBeValidated.feature.cs</LastGenOutput>
