trying to find a usable solution for the agent panel

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -30,4 +30,5 @@
   <repository path="..\tests\Euclid.Sdk.NugetTests\packages.config" />
   <repository path="..\tests\Euclid.Sdk.TestComposite\packages.config" />
   <repository path="..\tests\Euclid.Sdk.Specifications\packages.config" />
+  <repository path="..\src\sdk\PortableAgentPanel\packages.config" />
 </repositories>
