--- a/tests/Euclid.Sdk.TestComposite/Web.config
+++ b/tests/Euclid.Sdk.TestComposite/Web.config
@@ -11,7 +11,7 @@
         <add key="DataConnectionString" value="UseDevelopmentStorage=true" />
     </appSettings>
     <connectionStrings>
-        <add name="test-db" connectionString="Data Source=.;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
+        <add name="test-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
         <add name="Sqlite_InMemory" providerName="System.Data.SQLite" connectionString="Data Source=:memory:;Version=3;New=True" />
     </connectionStrings>
     <system.web>
