--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -31,4 +31,5 @@
   <repository path="..\tests\Euclid.Sdk.Specifications\packages.config" />
   <repository path="..\src\sdk\PortableAgentPanel\packages.config" />
   <repository path="..\tests\Euclid.Sdk.NugetTests\packages.config" />
+  <repository path="..\src\sdk\CompositeInspector\packages.config" />
 </repositories>
